--- a/tsprandom/Cargo.toml
+++ b/tsprandom/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 tsptools = { path = "../tsptools" }
 rustc-hash = "1.1.0"
 chrono = "0.4.23"
+rand = { version = "0.8.5", features = ['small_rng'] }
+rand_chacha = { version = "0.3.1", features = ['simd'] }
