--- a/tsprandom/Cargo.toml
+++ b/tsprandom/Cargo.toml
@@ -11,3 +11,4 @@ rustc-hash = "1.1.0"
 chrono = "0.4.23"
 rand = { version = "0.8.5", features = ['small_rng'] }
 rand_chacha = { version = "0.3.1", features = ['simd'] }
+plotly = "0.8.3"
